restore easter egg

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -197,4 +197,7 @@ assert_visible('finished');</code></pre>
 
   {{> google-analytics}}
 
+  <script src="/components/jquery/dist/jquery.min.js"></script>
+  {{> egg}}
+
 </html>
