--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -89,7 +89,7 @@
           <div class="steps-to-success mdl-grid">
             <div class="mdl-cell mdl-cell--4-col">
               <h3>Write high-level UI tests</h3>
-              <div class="illustration">
+              <div class="illustration ide">
                 <i class="material-icons" style="color: #fff; font-size: 120px; position: absolute; top: 0; left: -10px;">stay_current_portrait</i>
 <pre style="position: absolute; left: 100px; top: 18px;">tap('account')
 type_text('my_username')
@@ -106,7 +106,7 @@ assert_visible('home')
             </div>
             <div class="mdl-cell mdl-cell--4-col">
               <h3>Integrate into your build</h3>
-              <div class="illustration">
+              <div class="illustration integrate">
                 <span style="position: absolute; background: #aaa; left: 32px; right: 32px; top: 0; height: 2em; box-shadow: 0 2px 8px rgba(0,0,0,0.5); border-radius: 4px 4px;"></span>
 <pre style="padding: 1em; position: absolute; top: 20px; left: 32px; right: 32px; height: 6em; background: #111; box-shadow: 0 2px 8px rgba(0,0,0,0.5);">$ gradle assembleDebug
 $ boop.py upload app.apk
@@ -115,7 +115,7 @@ $ boop.py upload app.apk
             </div>
             <div class="mdl-cell mdl-cell--4-col">
               <h3>Get test results by email</h3>
-              <div class="illustration">
+              <div class="illustration test-result">
                 <span style="background: #fff; position: absolute; top: 0; left: 16px; right: 16px; bottom: 0; box-shadow: 0 2px 8px rgba(0,0,0,0.5);"></span>
                 <span style="background: #f33; position: absolute; left: 0; top: -16px; line-height: 32px; width: 32px; height: 32px; border-radius: 16px; text-align: center; box-shadow: 0 1px 4px rgba(0,0,0,0.5);"></span>
                 <i class="material-icons" style="position: absolute; color: #aaa; font-size: 32px; top: 20px; left: 40px;">mail</i>
