fix mobile alignment on landing page

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -42,6 +42,7 @@
 
       .steps-to-success {
         margin-top: 75px;
+        justify-content: center;
       }
       .steps-to-success .mdl-cell {
         min-width: 300px;
