--- a/server/html/report.html
+++ b/server/html/report.html
@@ -84,6 +84,7 @@
         max-height: 300px;
         margin-top: 0.5em;
         border: none;
+        box-shadow: 0 0 8px rgba(0,0,0,0.25);
       }
 
       div#error {
