add Slack-Chat to / and /pricing

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -74,6 +74,20 @@
         margin: 1em 0;
         min-height: 0;
       }
+
+      #slack-chat-btn {
+        z-index: 2;
+        cursor: pointer;
+        position: fixed;
+        right: 1.5em;
+        bottom: 1em;
+        background-color: white;
+      }
+
+      #slack-chat-btn i {
+        font-size: 0.9em;
+        opacity: 0.85;
+      }
     </style>
   </head>
   <body>
@@ -192,6 +206,9 @@ assert_visible('finished');</code></pre>
         {{> footer-public}}
       </main>
     </div>
+    <button id="slack-chat-btn" class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect brand-color" title="Have a question?">
+      <i class="material-icons">feedback</i>
+    </button>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
   <script>hljs.initHighlighting();</script>
@@ -199,6 +216,9 @@ assert_visible('finished');</code></pre>
   {{> google-analytics}}
 
   <script src="/components/jquery/dist/jquery.min.js"></script>
+
+  {{> slack-chat querySelector='#slack-chat-btn'}}
+
   {{> egg}}
 
 </html>
