upgrade Slack-Chat, use Roboto font

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -88,6 +88,10 @@
         font-size: 0.9em;
         opacity: 0.85;
       }
+
+      .slackchat {
+        font-family: 'Roboto';
+      }
     </style>
   </head>
   <body>
