rename update app button

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -186,7 +186,7 @@
       }
       input[type=file]::before {
         color: #111;
-        content: 'Upload app';
+        content: 'Update app';
         display: inline-block;
         background: #f9f9f9;
         border: 1px solid #999;
