Try our IDE -> Try Demo

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -117,7 +117,7 @@ assert_visible('home')
 </pre>
                 <a style="display: block; text-align: center; padding-top: 140px;" href="/demo" target="_blank">
                   <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect">
-                    Try our IDE
+                    Try Demo
                   </button>
                 </a>
               </div>
