remove wild " in /app/_

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -317,7 +317,7 @@
           </form>
           <h4>or</h4>
           <div class="info">
-            <code><a href="/scripts/boop.py" target="_blank">boop.py</a> --access-token <span class="info access-token" title="Your access token">{{access_tokens.[0]}}</span>" upload {{app.id}} <span class="info path-to-app" title="Replace this with the PATH to your APK">$PATH_TO_APK</span></code>
+            <code><a href="/scripts/boop.py" target="_blank">boop.py</a> --access-token <span class="info access-token" title="Your access token">{{access_tokens.[0]}}</span> upload {{app.id}} <span class="info path-to-app" title="Replace this with the PATH to your APK">$PATH_TO_APK</span></code>
           </div>
           <h4>or</h4>
           <div class="info">
