make back button on report go to app

--- a/server/html/report.html
+++ b/server/html/report.html
@@ -140,7 +140,7 @@
           {{> admin-button user}}
           {{> account-button user}}
         </div>
-        <a href="/app/{{result.app.id}}/test/{{result.code_id}}/reports">
+        <a href="/app/{{result.app.id}}">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
         </a>
         {{> report-info .}}
